<resources>
    <string name="app_name">Fuel Cap</string>


    <!-- ActionBar -->
    <string name="abName">Fuel Cap</string>

    <!-- Main Activity Language ID's -->
    <string name="email">Email</string>
    <string name="pword">Password</string>
    <string name="login">Login</string>
    <string name="incorrect">No of incorrect attempts:</string>
    <string name="sUp">SignUp</string>
    <string name="forPword">Forgot Password</string>
    <string name="changeLang">Change Language</string>

    <!-- Menu Button and Home Page / Secondary Activity -->
    <string name="logout">Logout</string>
    <string name="review_page">Review Page</string>
    <string name="contact_us">Contact Us</string>
    <string name="languages">Languages</string>
    <string name="maps">Fuel Stations</string>
    <string name="ev_charge_points">EV Charge Points</string>
    <string name="review">Review</string>
    <string name="pa_SecAct">Price Average</string>

    <!-- this is the message that will be shown between pressing the EV button and the page showing up.
         It's not what I or we had in mind for the finished product but it's something. -->
    <string name="EVcp">Please Type: EV Charge Point in the search bar above to find the closest charge point to your location</string>


    <!-- Verify ID message -->
    <string name="sCool">Stay cool, while you are verified!</string>

    <!-- Notifications -->
    <string name="logFail">Login Failed</string>
    <string name="verEmail">Please verify your email</string>

    <!-- Registration Page -->
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="already_signed_in">Already Signed In</string>

    <!--  Change language dialog title -->
    <string name="setTitle">Choose Your Language..</string>

    <!-- Review class and .xml -->
    <string name="fBack">Thank you for your feedback</string>
    <string name="revSub">Submit</string>

    <!-- Contact us page and related -->
    <string name="fConUsPa">FuelCap Contact us page!</string>
    <string name="conEmail">Please Confirm Email</string>
    <string name="conMsg">Type your message or query here</string>
    <string name="snd">Send</string>
    <string name="conFill">Please go back and fill all fields</string>
    <string name="conIntNo">You don\'t have an internet connection</string>
    <string name="conNoEmail">Email needs to be filled out and contain an @ symbol. Thank You</string>

    <!-- Page that is brought up after the contact message has been sent  -->
    <string name="afConMsg">Thank you for taking the time to contact FuelCap. We appreciate it and a member of our team will be in touch shortly to address your message or query</string>
    <string name="afConBtn1">Main Menu</string>
    <string name="afConBtn2">Exit Application</string>
    <string name="option_get_place" />


    <!-- Fuel Prices Page -->
    <string name="prlAVG">Petrol Average</string>
    <string name="dslAVG">Diesel average</string>
    <string name="pPPL">€1.23 per liter</string>
    <string name="dPPL">€1.15 per liter</string>


</resources>
