<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id ="@+id/logoutMenu"
            android:orderInCategory ="100"
            app:showAsAction ="ifRoom"
            android:title ="@string/logout">
    </item>

    <item
        android:id ="@+id/reviewpageMenu"
        android:orderInCategory ="200"
        app:showAsAction ="never"
        android:title ="@string/review_page">
    </item>

    <item
        android:id ="@+id/contactusMenu"
        android:orderInCategory ="300"
        app:showAsAction ="never"
        android:title ="@string/contact_us">
    </item>

    <item
        android:id ="@+id/languagesMenu"
        android:orderInCategory ="400"
        app:showAsAction ="never"
        android:title ="@string/languages">
    </item>

    </menu>